# doom-wgpu

./: .gitignore  .gitmodules  Cargo.toml  build.rs
src/: app.rs  audio.rs  lib.rs  main.rs
src/audio/: dmx.rs  manager.rs  mod.rs
src/renderer/: mod.rs  pipeline.rs  state.rs  texture.rs
src/renderer/shaders/: shader.wgsl
src/renderer/texture/: color_map.rs  depth.rs  mod.rs  palette.rs  palletized_texture.rs
src/wad/: demo.rs  mod.rs  mus.rs  patch.rs  sound.rs  wad.rs
src/wad/map/: ajbsp.rs  linedef.rs  mod.rs  segment.rs  sidedef.rs  thing.rs  vertex.rs
