[package]
name = "doom-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
dasp_sample = "0.11.0"
env_logger = "0.11.9"
flagset = "0.4.7"
pollster = "0.4.0"
rodio = "0.22.2"
rustysynth = "1.3.6"
wgpu = "28.0.0"
winit = "0.30.13"
